src/test/deca/syntax/valid/sansObjet/18_printBool.deca
/* Description:
    Print bool, syntax correct

    Historique:
      cree le 10/01/2020
*/

{
  println(true);
  println(false);
  print(false);
  print(true);
}
